--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8878,6 +8878,8 @@
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_GridViewPartial_FacturasSinGuia.cshtml" />
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_GridViewPartial_guias_remision.cshtml" />
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_GridViewPartial_guias_remision_det.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_CruceND.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_CruceND_x_cruzar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
