--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8880,6 +8880,11 @@
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_GridViewPartial_guias_remision_det.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_CruceND.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_CruceND_x_cruzar.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ProformaFacturacion\_GridViewPartial_FProforma_det.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ProformaFacturacion\_GridViewPartial_FProforma_cuotas.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ProformaFacturacion\_CmbProducto_FProforma.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ProformaFacturacion\_CmbCliente_FProformaFactura.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ProformaFacturacion\_GridViewPartial_LoteFProforma.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
