--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -176,6 +176,8 @@
     <Compile Include="Inventario\in_CatalogoTipo_Bus.cs" />
     <Compile Include="Inventario\in_Catalogo_Bus.cs" />
     <Compile Include="Inventario\in_categorias_Bus.cs" />
+    <Compile Include="Inventario\in_devolucion_inven_Bus.cs" />
+    <Compile Include="Inventario\in_devolucion_inven_det_Bus.cs" />
     <Compile Include="Inventario\in_grupo_Bus.cs" />
     <Compile Include="Inventario\in_Ing_Egr_Inven_Bus.cs" />
     <Compile Include="Inventario\in_Ing_Egr_Inven_det_Bus.cs" />
