--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -384,6 +384,7 @@
     <Compile Include="Facturacion\fa_cuotas_x_doc_Data.cs" />
     <Compile Include="Facturacion\fa_factura_Data.cs" />
     <Compile Include="Facturacion\fa_factura_det_Data.cs" />
+    <Compile Include="Facturacion\fa_factura_x_fa_guia_remision_Data.cs" />
     <Compile Include="Facturacion\fa_formaPago_Data.cs" />
     <Compile Include="Facturacion\fa_guia_remision_Data.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_Data.cs" />
