--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Contabilidad\ct_plancta_Bus.cs" />
     <Compile Include="Contabilidad\ct_plancta_nivel_Bus.cs" />
     <Compile Include="Contabilidad\ct_punto_cargo_Bus.cs" />
+    <Compile Include="Contabilidad\fa_factura_x_fa_guia_remision_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_CatalogoTipo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Catalogo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_Bus.cs" />
