--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Facturacion\fa_cuotas_x_doc_Info.cs" />
     <Compile Include="Facturacion\fa_factura_det_Info.cs" />
     <Compile Include="Facturacion\fa_factura_Info.cs" />
+    <Compile Include="Facturacion\fa_factura_x_fa_guia_remision_Info.cs" />
     <Compile Include="Facturacion\fa_formaPago_Info.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_Info.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_x_factura_Info.cs" />
