--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8892,6 +8892,8 @@
     <Content Include="Areas\Facturacion\Views\CatalogoTipoFacturacion\Anular.cshtml" />
     <Content Include="Areas\Facturacion\Views\CatalogoTipoFacturacion\_GridViewPartial_catalogotipo_fa.cshtml" />
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_GridViewPartial_Facturas_x_guia.cshtml" />
+    <Content Include="Areas\Inventario\Views\DevolucionInventario\_GridViewPartial_devolucion_det_x_cruzar.cshtml" />
+    <Content Include="Areas\Inventario\Views\DevolucionInventario\_GridViewPartial_devolucion_det.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
