--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8900,6 +8900,7 @@
     <Content Include="Areas\Facturacion\Views\CatalogoFacturacion\Index.cshtml" />
     <Content Include="Areas\Facturacion\Views\CatalogoFacturacion\Modificar.cshtml" />
     <Content Include="Areas\Facturacion\Views\CatalogoFacturacion\Nuevo.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_008.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9011,6 +9012,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
