--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Reportes\Caja\CAJ_002_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_002_Bus.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_003_balances_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Bus.cs" />
