--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -525,6 +525,12 @@
     <Compile Include="Reportes\Contabilidad\CONTA_003_BG_Rpt.Designer.cs">
       <DependentUpon>CONTA_003_BG_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_003_ER_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_003_ER_Rpt.Designer.cs">
+      <DependentUpon>CONTA_003_ER_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -8908,6 +8914,7 @@
     <Content Include="Areas\Facturacion\Views\CatalogoFacturacion\Modificar.cshtml" />
     <Content Include="Areas\Facturacion\Views\CatalogoFacturacion\Nuevo.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_008.cshtml" />
+    <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_003.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9019,6 +9026,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
@@ -9078,6 +9086,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_003_BG_Rpt.resx">
       <DependentUpon>CONTA_003_BG_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_003_ER_Rpt.resx">
+      <DependentUpon>CONTA_003_ER_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.resx">
       <DependentUpon>CXC_001_diario_Rpt.cs</DependentUpon>
