--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -711,6 +711,12 @@
     <Compile Include="Reportes\Facturacion\FAC_008_Rpt.Designer.cs">
       <DependentUpon>FAC_008_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_009_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_009_Rpt.Designer.cs">
+      <DependentUpon>FAC_009_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Importacion\IMP_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -8922,6 +8928,7 @@
     <Content Include="Areas\Facturacion\Views\CatalogoFacturacion\Nuevo.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_008.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_003.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_009.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9186,6 +9193,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Facturacion\FAC_008_Rpt.resx">
       <DependentUpon>FAC_008_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Facturacion\FAC_009_Rpt.resx">
+      <DependentUpon>FAC_009_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Importacion\IMP_001_Rpt.resx">
       <DependentUpon>IMP_001_Rpt.cs</DependentUpon>
