agrgar controlador de liquidacion

--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -320,6 +320,7 @@
     <Compile Include="Areas\Importacion\Controllers\CatalogoTipoImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\GastosImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\AsignacionDeGastosController.cs" />
+    <Compile Include="Areas\Importacion\Controllers\LiquidacionOrdenCompraController.cs" />
     <Compile Include="Areas\Importacion\Controllers\OrdenCompraExteriorController.cs" />
     <Compile Include="Areas\Importacion\Controllers\ParametrosImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\RecepcionOrdenCompraController.cs" />
@@ -9003,6 +9004,7 @@
     <Folder Include="Areas\Facturacion\Models\" />
     <Folder Include="Areas\General\Models\" />
     <Folder Include="Areas\Importacion\Models\" />
+    <Folder Include="Areas\Importacion\Views\LiquidacionOrdenCompra\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
