--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8930,6 +8930,11 @@
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_008.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_003.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_009.cshtml" />
+    <Content Include="Areas\Importacion\Views\LiquidacionOrdenCompra\Nuevo.cshtml" />
+    <Content Include="Areas\Importacion\Views\LiquidacionOrdenCompra\Modificar.cshtml" />
+    <Content Include="Areas\Importacion\Views\LiquidacionOrdenCompra\Index.cshtml" />
+    <Content Include="Areas\Importacion\Views\LiquidacionOrdenCompra\Anular.cshtml" />
+    <Content Include="Areas\Importacion\Views\LiquidacionOrdenCompra\_GridViewPartial_liquidacion_oc.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9004,7 +9009,6 @@
     <Folder Include="Areas\Facturacion\Models\" />
     <Folder Include="Areas\General\Models\" />
     <Folder Include="Areas\Importacion\Models\" />
-    <Folder Include="Areas\Importacion\Views\LiquidacionOrdenCompra\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
@@ -9042,7 +9046,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
