--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1628,6 +1628,9 @@
     <Compile Include="vwin_Ing_Egr_Inven_por_devolver.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwin_Producto_Composicion.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwin_producto_hijo_combo.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
